<resources>
    <string name="app_name">My Business Trip</string>

    //-------menu--------------------------------------------------------------------------------
    //Bottom menu
    <string name="bmenu_visits">визиты</string>
    <string name="bmenu_statistics">резузьтаты</string>
    <string name="bmenu_accountability">подотчет</string>
    <string name="bmenu_exchange">обмен</string>
    <string name="bmenu_map">карта</string>


    //-------Buttons----------------------------------------------------------------------------
    <string name="fab_description">Кнопка добавить новый визит</string>
    <string name="btn_finish_visit">Завершить визит</string>
    <string name="btn_create_photo">Сделать ФОТО</string>
    <string name="btn_save_changes">Сохранить изменения</string>

    //Visits Fragment Buttons
    <string name="visits_all_filter">фильтрация</string>
    <string name="visits_all_sorted">сортировка</string>

    //Visit in Progress Buttons
    <string name="change_main_info">изменить инфо по контакту</string>
    
    //Data exchange Buttons
    <string name="export_data">Выгрузить данные в Excel-файл</string>
    <string name="import_data">Загрузить данніе из Excel-файла</string>
    <string name="get_a_template">Получить шаблон для заполнения</string>

    //--------Text View--------------------------------------------------------------------------

    //add_fragment
    <string name="tv_legal">Юр.название:</string>
    <string name="tv_label">Вывеска:</string>
    <string name="tv_address">Адресс:</string>
    <string name="tv_address_locality">Область:</string>
    <string name="tv_address_region">Населенный пункт:</string>
    <string name="tv_responsible_employer">Ответственный сотрудник:</string>

    <string name="tv_clients_name">Имя клиента:</string>
    <string name="tv_phone">Телефон:</string>
    <string name="tv_email">Email:</string>
    <string name="tv_site">Сайт:</string>

    <string name="tv_info_before">Описание:</string>
    <string name="tv_info_after">Комментарий после визита:</string>
    <string name="tv_todo">Необходимо сделать:</string>

    <string name="tv_div_contacts">Контактная информация:</string>


    //--------Edit Text hints--------------------------------------------------------------------

    //add_fragment
    <string name="et_hint_legal">Юридическое название</string>
    <string name="et_hint_label">Фактическое название (вывеска)</string>
    <string name="et_hint_address">адрес</string>
    <string name="et_hint_locality">Населенный пункт</string>
    <string name="et_hint_region">Область</string>
    <string name="et_hint_employer">Ответственный за клиента сотрудник</string>

    <string name="et_hint_name">Имя контакта</string>
    <string name="et_hint_phone">Phone</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_site">www</string>

    <string name="et_hint_after">Описать ситуацию после визита и достигнутые договоренности</string>
    <string name="et_hint_todo">ЗАДАЧИ: что необходимо сделать в будущем</string>


    //-------------------------------------------------
    <string name="hello_blank_fragment">ТЕСТ - Добавить ВИЗИТ</string>


    //Text for dialogs--------------------------------
    <string name="dlg_choose_file">Выберите Excel файл: </string>


    //---------Data for excel spreadsheet--------------
    <string-array name="table_columns">
        <item>Ответственный сотрудник</item>
        <item>Область</item>
        <item>Населенный пункт</item>
        <item>Юр.Лицо</item>
        <item>Фактическое название</item>
        <item>Имя контакта</item>
        <item>Телефоны</item>
        <item>Email</item>
        <item>Сайт</item>
        <item>Описание (задание)</item>
        <item>Комментарий после визита</item>
        <item>Что нужно сделать</item>
    </string-array>
    <string-array name="table_columns_width">
        <item>4000</item>
        <item>4000</item>
        <item>5000</item>
        <item>4000</item>
        <item>5000</item>
        <item>4000</item>
        <item>4500</item>
        <item>4000</item>
        <item>4000</item>
        <item>12000</item>
        <item>12000</item>
        <item>10000</item>
    </string-array>
</resources>